--- a/static/css/bootstrap-theme.css
+++ b/static/css/bootstrap-theme.css
@@ -2313,3 +2313,10 @@ header {
 .pagination {
     margin-top: 0;
 }
+
+.color-item-big {
+    width: 150px;
+    height: 30px;
+    margin: 8px 4px;
+    border: 1px solid #ccc;
+}
